--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,58 @@ body{
 
 #header{
     width: 100%;
-    height: 100vh;
     background-size: cover;
     background-position: center;
-    padding-bottom: 80px;
     background-color: #ebcd85;
+}
+
+.button-23 {
+  background-color: #ebcd85;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  padding: 13px 23px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
+  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+  user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+}
+
+.button-23:focus-visible {
+  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+  transition: box-shadow .2s;
+}
+
+.button-23:active {
+  background-color: #ebcd85;
+  border-color: #000000;
+  transform: scale(.96);
+}
+
+.button-23:disabled {
+  border-color: #DDDDDD;
+  color: #DDDDDD;
+  cursor: not-allowed;
+  opacity: 1;
+}
+
+.main-content{
+    position: relative;
+    display: block;
+    min-height: 100vh;
 }
 
 .container{
@@ -162,23 +209,22 @@ nav ul a:hover::after{
     display: block;
 }
 
-.header-row{
-    display:flex;
+.hero .header-content{
+    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: #ebcd85;
 }
 
-.header-text {
-    flex-basis: 50%;
+.hero .header-text{
+    flex-basis: 45%;
     color: #222;
-    margin-top: 14%;
-    padding-left: 2.5%;;
+    margin-top: 3%;
+    padding-left: 2.5%;
 }
 
 .header-text h1{
     color: #222;
-    font-size:60px;
+    font-size: 60px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -187,17 +233,20 @@ nav ul a:hover::after{
     font-size: 20px;
 }
 
-.header-image{
+.hero .header-image{
     flex-basis: 45%;
-    padding-top: 25px;
-    padding-left: 70px;
 }
 
-.header-image img{
+.hero .header-image img{
     width: 60%;
     border-radius: 20px; 
     box-shadow: 10px 10px 40px rgba(255, 252, 252, 0.50);
 }
+
+.header-text .projects-button{
+    margin-top: 45px;
+}
+
 
 /* ---------------about----------------*/
 #about{
@@ -517,8 +566,8 @@ nav ul a:hover::after{
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-    scrollbar-width: none; /* Firefox specific: hide scrollbar */
-    -ms-overflow-style: none; /* IE/Edge specific: hide scrollbar */
+    scrollbar-width: none; 
+    -ms-overflow-style: none; 
 }
   
 .image-container {
@@ -526,15 +575,15 @@ nav ul a:hover::after{
 }
   
 .image-container img {
-    max-width: 100%; /* Ensure images do not exceed their container's width */
-    height: auto; /* Maintain aspect ratio */
+    max-width: 100%; 
+    height: auto; 
     scroll-snap-align: start;
     border-radius: 10px;
 }
 
 .image-container-unreleased img{
-    max-width: 100%; /* Ensure images do not exceed their container's width */
-    height: auto; /* Maintain aspect ratio */
+    max-width: 100%; 
+    height: auto; 
     scroll-snap-align: start;
     border-radius: 10px;
     filter: blur(3px);
@@ -662,7 +711,7 @@ button {
 /* ----------- contact ------------------ */
 
 #contact{
-    padding-top: 80px;
+    margin-top: 45px;
 }
 
 .contact-row{
@@ -789,38 +838,47 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px) {
     #header{
-        background-image: url() /* add a phone background */
-    }
-    .header-text p{
-        margin-top: 5%;
-        font-size: 16px;
-        line-height: 1.5;
-    }
-    .header-text h1{
-        font-size: 30px;
-        margin-top: 10%;
-    }
-
-    .header-text {
-        flex-basis: 100%;
-        color: #222;
-        margin-top: 14%;
-        text-align: center;
-        order: 1;
-    }
-
-    .header-image img{
-        margin-top: 75px;
-        display: block;
         width: 100%;
-        border-radius: 10px; 
-        box-shadow: 5px 10px 10px 0px rgba(255, 252, 252, 0.50);
+        background-position: center;
+        background-color: #ebcd85;
     }
 
-    .header-image{
-        order: 2;
-        flex-basis: 100%;
-        padding-right: 20%;
+    .hero .header-content{
+        display: block
+    }
+
+    .hero .header-text{
+        margin-top: 25%;
+        text-align: center;
+        height: 100vw;
+    }
+
+    .header-text h1{
+        font-size: 40px;
+    }
+
+    .header-text p{
+        font-size: 18px;
+        padding-left: 2.5%;
+        padding-right: 2.8%;
+    }
+
+    .hero .header-image img{
+        display: block;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+
+    .header-text .projects-button{
+        align-items: center;
+        margin-top: 200px;
+    }
+
+    .container-navbar{
+        padding: 10px 0px;
+        background-color: #ebcd85;
     }
 
     nav ul li.dropdown > .dropdown-content {
@@ -955,7 +1013,7 @@ nav .fa-solid{
         flex-basis: 100%;
     }
 
-    .main-content{
+    .main-content-project{
         position: relative;
         padding-bottom: 75px;
     }
@@ -970,6 +1028,10 @@ nav .fa-solid{
         background: #262626;
         font-weight: 300;
         color: #fff;
+    }
+
+    .button-23{
+        transform: translateY(-150px);
     }
 }
 
