--- a/styles.css
+++ b/styles.css
@@ -851,6 +851,7 @@ nav .fa-solid{
         margin-top: 25%;
         text-align: center;
         height: 100vw;
+        padding-left: 0%;
     }
 
     .header-text h1{
