added github link to tic-tac-toe project

--- a/styles.css
+++ b/styles.css
@@ -812,7 +812,7 @@ form .btn2{
 }
 
 .footer-project{
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     text-align: center;
