--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -132,6 +132,26 @@ nav ul a:hover::after {
 
 .nav-btn {
     cursor: pointer;
+    color: var(--color-white);
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+    padding-bottom: 5px;
+}
+
+.nav-btn::after {
+    content: '';
+    width: 0%;
+    height: 3px;
+    background: #e1c564;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    transition: 0.5s;
+}
+
+.nav-btn:hover::after {
+    width: 100%;
 }
 
 /* Mobile NavBar */
