--- a/src/pages/subsites/customBingo.css
+++ b/src/pages/subsites/customBingo.css
@@ -39,6 +39,7 @@
   aspect-ratio: 1 / 1;
   box-sizing: border-box;
   overflow: hidden;
+  justify-content: center;
 }
 
 /* Individual Cell */
@@ -46,11 +47,11 @@
   display: flex;
   align-items: center; /* Vertical centering */
   justify-content: center; /* Horizontal centering */
-  text-align: left;
+  text-align: center;
   white-space: normal;
-  overflow-wrap: anywhere;
   width: min(16vw, 100px);
   height: min(16vw, 100px);
+  font-size: min(10px, 30px);
   border: 1px solid #ccc;
   padding: 5px; /* Adds spacing around content */
   overflow: hidden;
@@ -62,7 +63,6 @@
   display: flex;
   text-align: left;
   white-space: normal;
-  overflow-wrap: anywhere;
   width: min(16vw, 100px);
   height: min(16vw, 100px);
   border: 1px solid #ccc;
