--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -346,6 +346,13 @@ nav .submenu-list li a:hover {
     border-radius: 10px;
     object-fit: cover;
     border: 1px solid #222222;
+    aspect-ratio: 16/9;
+}
+
+@media (min-width: 1024px) {
+  .featured-projects a:nth-child(4) {
+    display: none;
+  }
 }
 
 .featured-projects img:hover {
@@ -627,6 +634,7 @@ nav .submenu-list li a:hover {
 
 .project img {
     width: 100%;
+    aspect-ratio: 16/9;
     border-radius: 10px;
     border: 2px solid #967e47
 }
@@ -635,6 +643,23 @@ nav .submenu-list li a:hover {
     border: 2px solid rgb(223, 223, 223)
 }
 
+.show-button button{
+    display: block;
+    margin-top: 2%;
+    width: fit-content;
+    border: 1px solid #b59824;
+    padding: 20px 50px;
+    border-radius: 6px;
+    text-decoration: none !important;
+    background-color: #424242;
+    color: #dbdbdb;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.show-button button:hover {
+    background-color: #967e47;
+}
 /*====================== PROJECT DETAILS ==============================*/
 
 .project-detail-container {
@@ -706,6 +731,10 @@ nav .submenu-list li a:hover {
     margin-bottom: 5px;
 }
 
+.project-detail-col-1 h3 {
+    margin-top: 15px;
+}
+
 .project-detail-col-1 p {
     font-size: 19px;
     margin-bottom: 15px;
@@ -720,14 +749,13 @@ nav .submenu-list li a:hover {
 .project-detail-col-1 ul li {
     font-size: 19px;
     margin-right: 5px;
-    margin-bottom: 20px;
     display: inline-block;
 }
 
 .project-detail-col-1 ul span {
     font-size: 19px;
     margin-right: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     display: inline-block;
 }
 
@@ -804,6 +832,17 @@ nav .submenu-list li a:hover {
     height: auto;
     border-radius: 10px;
     object-fit: cover;
+}
+
+.media-video {
+  border-radius: 12px;
+  overflow: hidden; 
+}
+
+.media-video video {
+    width: 100%;
+    height: auto;
+    border: 2px solid #0c0c0c;
 }
 
 /* Scroll Buttons */
